<resources>
    <string name="app_name">Dividoc</string>

    <!-- Activities titles -->
    <string name="gallery">Photo Gallery</string>
    <string name="review">Please check that the information are correct</string>
    <string name="transfer">Transfer</string>
    <string name="settings">Settings</string>

    <!-- Buttons -->
    <string name="add_case_button">New case</string>
    <string name="export_file_button">Export</string>
    <string name="select_cases_files">Files</string>
    <string name="select_cases_archives">Archives</string>
    <string name="start">Start</string>
    <string name="discard_changes">Discard changes</string>
    <string name="return_button">Return</string>
    <string name="send_button">Send</string>
    <string name="confirm_export">Export</string>
    <string name="save_case">Save</string>
    <string name="delete_case">Delete</string>
    <string name="photo_gallery">Photos</string>
    <string name="audios">Audios</string>
    <string name="record_audio">Record an audio</string>
    <string name="take_photo">Take a photo</string>
    <string name="delete_image">Delete the photo</string>
    <string name="edit">Edit</string>

    <!-- Informational and help messages -->
    <string name="tag_title">Please complete the victim\'s identification form</string>
    <string name="max_photos_gallery">Maximum %d photos</string>
    <string name="to_help_us">To help us</string>
    <string name="provide_file_access">In order to help the Red Cross to identify the victims, it is recommended to give as much information as possible. By giving read and write access to files, this identification work will be greatly facilitated</string>
    <string name="provide_camera">In order to help the Red Cross to identify the victims, it is recommended to give as much information as possible. By taking a picture of the body, this identification work will be greatly facilitated</string>
    <string name="provide_location">In order to help the Red Cross to identify the victims, it is recommended to give as much information as possible. By giving the location of where the body was found, this identification work will be greatly facilitated</string>
    <string name="provide_audio">In order to help the Red Cross to identify the victims, it is recommended to give as much information as possible. By giving the permission to record audio, this identification work will be greatly facilitated</string>
    <string name="permission_revoked">Permission revoked</string>
    <string name="revoked_file_access">The file access permission was revoked. In order to use the application, you need to provide the permission from your phone settings</string>
    <string name="revoked_camera">The camera permission was revoked. In order to use the application, you need to provide the permission from your phone settings</string>
    <string name="revoked_location">The location permission was revoked. In order to help the Red Cross to identify the victims, you should provide the permission from your phone settings</string>
    <string name="revoked_audio">The microphone permission was revoked. In order to help the Red Cross to identify the victims, you should provide the permission from your phone settings</string>
    <string name="terms_of_service"> Programmers, editors and distributors of this application shall not be liable for any claim arising
        from the use made of the software. Before using the application, it is the USER RESPONSABILITY to verify with the competent authorities
        that all collected or processed informations by the application fulfils the obligations defined by applicable law. Any non-compliance
        with those conditions excludes you from getting the application. </string>
    <string name="password_is">Super user mode is deactivated. Your zip file is encrypted with the following password : %s\nThis password is copied to the clipboard</string>
    <string name="password_was_copied_to_clipboard">The password was copied to the clipboard</string>

    <!-- Labels and hints -->
    <string name="name">Name</string>
    <string name="gender">Sex</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="additional_information">Additional information</string>
    <string name="tag" translatable="false">Tag</string>
    <string name="dot_separator" translatable="false">.</string>
    <string name="input_serial_number">Please enter your phone\'s country code and serial number</string>
    <string name="country_code_hint">Contry code</string>
    <string name="country_code_allowed" translatable="false">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="serial_number_hint">Serial number</string>
    <string name="delete_label">Delete</string>
    <string name="expiration_label">Directory\'s expiration date</string>
    <string name="ocdc" translatable="false">OCDC</string>
    <string name="password_label">Directory password</string>
    <string name="zip_path_label">Path to zip folder</string>
    <string name="recording">Recording…</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="unknown">Unknown</string>
    <string name="adult">Adult</string>
    <string name="teenager">Teenager</string>
    <string name="kid">Kid</string>
    <string name="baby">Baby</string>
    <string name="no_password">Super user mode activated. No password is required</string>
    <string name="share_file">Share file</string>
    <string name="copy_password_and_proceed">Continue</string>
    <string name="audio">Audio</string>

    <!-- Warnings -->
    <string name="warning">Warning</string>
    <string name="input_verification">Is this number: %s correct ?\nBe aware that you cannot change it later</string>
    <string name="invalid_ocdc">OCDC accepts only letters, digits and dashes</string>
    <string name="cancel_changes">Changes will not be saved.\nDo you want to continue ?</string>
    <string name="cannot_create_picture_file">Error : Picture file could not be created</string>
    <string name="cannot_create_pictures_dir">Error : The images\' directory cannot be created</string>
    <string name="cannot_access_pictures_dir">Error : The images\' directory cannot be accessed</string>
    <string name="delete_picture_warning">Once a photo is deleted, it can\'t be recovered. Do you want to continue ?</string>
    <string name="delete_case_label">Once a case is deleted, it can\'t be recovered. Do you want to continue ?</string>
    <string name="delete_audio_warning">Once an audio file is deleted, it can\'t be recovered. Do you want to continue ?</string>
    <string name="cannot_create_case_dir">Error : The directory to store the case cannot be created</string>
    <string name="cannot_save_pictures">Error : The pictures cannot be saved</string>
    <string name="cannot_open_json_file">The data could not be loaded</string>
    <string name="cannot_parse_json_file">The JSON data could not be parsed</string>
    <string name="read_before_export">A folder containing all your files will be created and can be exported by: USB, email or bluetooth. If the file remains in your phone for more than %d hours, it will be encrypted and you will have to contact the ICRC to decrypt it. Make sure that the authorities are ready to receive the file. </string>
    <string name="one_photo_minimum">A case needs at least one photo</string>
    <string name="country_code_allowed_error_message">Only basic letters are allowed</string>
    <string name="serial_number_allowed_error_message">Only numbers are allowed</string>

    <!-- res content description -->
    <string name="return_previous_act">Return to the previous activity</string>
    <string name="add_picture">Add a picture to the case</string>
    <string name="image_description">An image of the case</string>
    <string name="delete_picture_content_description">A button to delete the picture</string>
    <string name="tag_help">Displays tag information to help filling the form</string>
    <string name="tag_gallery_description">Displays the photo gallery to overview pictures</string>
    <string name="tag_audio_description">Displays the audio list and player</string>
    <string name="tag_delete_description">Deletes the current case</string>
    <string name="tag_save_description">Saves the current case</string>
    <string name="edit_button_description">Edit the case</string>
    <string name="save_button_description">Save the case into phone memory</string>
    <string name="edit_case_description">Edit the case</string>

    <!-- Settings strings -->
    <string name="dark_mode">Dark mode</string>
    <string name="dark_mode_info">Enable the dark theme</string>
    <string name="super_user_mode">Super user mode</string>
    <string name="super_user_mode_info">Deactivate the password protection for zipped files</string>
    <string name="lang">Language</string>
    <string name="lang_info">Change application language</string>
    <string-array name="language_array">
        <item>🤖 Automatic</item>
        <item>🇬🇧 English</item>
        <item>🇫🇷 Français</item>
        <item>🇪🇸 Español</item>
    </string-array>
    <string-array name="language_array_values">
        <!-- Language code cannot got '-' & must be 2 small case letter only -->
        <item>auto</item>
        <item>en</item>
        <item>fr</item>
        <item>es</item>
    </string-array>
    <string name="show_zip_passwords">Show zip passwords</string>

    <!-- Other -->
    <string name="ocdc_default_value" translatable="false">0</string>

    <!-- Update -->
    <string name="update_title">Update available</string>
    <string name="update_body">A new version of Dividoc is available. It is extending functionalities and correcting bugs. Would you like to install it ?</string>
    <string name="no_update_title">Dividoc is up to date</string>
    <string name="no_update_body">No update available. Check for update later.</string>
    <string name="update_confirm">Update now</string>
    <string name="update_deny">Later</string>

</resources>