<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:id="@+id/dark_mode_preference"
        app:key="dark_mode"
        app:title="@string/dark_mode"
        app:icon="@drawable/dark_mode"
        app:summary="@string/dark_mode_info"
        app:defaultValue="false" />

    <SwitchPreferenceCompat
        app:key="super_user_mode"
        app:title="@string/super_user_mode"
        app:icon="@drawable/super_user_mode"
        app:summary="@string/super_user_mode_info"
        app:defaultValue="true" />

    <ListPreference
        app:key="lang"
        app:title="@string/lang"
        app:icon="@drawable/language"
        app:summary="@string/lang_info"
        app:entries="@array/language_array"
        app:entryValues="@array/language_array_values" />

    <Preference
        app:key="show_zip_passwords"
        app:title="@string/show_zip_passwords"
        app:icon="@drawable/show_passwords" >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.insalyon.dividoc"
            android:targetClass="com.insalyon.dividoc.ShowZipPasswordsActivity" />
    </Preference>

</PreferenceScreen>
