<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tag_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tag_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="4" />

        <!--
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_help_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/tag_help"
            android:focusable="true"
            app:backgroundTint="@color/primary"
            app:srcCompat="@android:drawable/ic_menu_help"
            android:layout_weight="1" />
            -->

    </LinearLayout>

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1" />

    <Spinner
        android:id="@+id/age_spinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/location_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints=""
        android:hint="@string/location"
        android:inputType="text"
        android:maxLines="3"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/additional_info_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints=""
        android:hint="@string/additional_information"
        android:layout_weight="1"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/cc_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="none" />

        <TextView
            android:id="@+id/tag_separator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dot_separator"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/sn_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="none" />

        <TextView
            android:id="@+id/tag_separator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dot_separator"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/vsn_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="none" />

        <TextView
            android:id="@+id/tag_separator3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dot_separator"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ocdc_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ocdc"
            android:textAlignment="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/gallery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/photo_library"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:breakStrategy="high_quality"
            android:text="@string/photo_gallery"
            app:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/record_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/record_voice"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:breakStrategy="high_quality"
            android:text="@string/record_audio"
            app:backgroundTint="@color/purple_500" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_delete"
            android:background="@color/purple_500"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="5dp"
            app:backgroundTint="@color/purple_500"
            android:contentDescription="@string/delete_case"
            style="@style/Widget.AppCompat.TextView" />

        <Button
            android:id="@+id/save_case_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_case"
            android:drawableRight="@drawable/done"
            android:focusable="true"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:backgroundTint="@color/purple_500" />

    </LinearLayout>

</LinearLayout>