<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="20dp" >

    <TextView
        android:id="@+id/review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:textColor="@color/primary"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="30dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginStart="30dp"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/age_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginStart="30dp"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="30dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/additional_info_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/additional_information"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="2"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/additional_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tag_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="30dp"
            android:textSize="18sp" />

    </LinearLayout>

    <!--
    <TextView
        android:id="@+id/geoloc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:layout_weight="1"
        android:textColor="@color/primary"
        android:textSize="18sp" />
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/delete_button_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_delete"
            android:background="@color/purple_500"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="5dp"
            android:breakStrategy="high_quality"
            app:backgroundTint="@color/purple_500"
            android:contentDescription="@string/delete_case"
            style="@style/Widget.AppCompat.TextView" />

        <Button
            android:id="@+id/edit_button_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:drawableLeft="@drawable/edit"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="5dp"
            android:breakStrategy="high_quality"
            app:backgroundTint="@color/purple_500" />

        <Button
            android:id="@+id/save_button_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_case"
            android:drawableRight="@drawable/done"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="5dp"
            android:breakStrategy="high_quality"
            app:backgroundTint="@color/purple_500" />

    </LinearLayout>

</LinearLayout>