<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/gallery_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/gallery"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/max_photo_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/max_photos_gallery" />
    </LinearLayout>

    <GridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:layout_weight="4"
        android:verticalSpacing="15dp"
        android:padding="15dp"
        android:clipToPadding="false" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/return_gallery"
            android:contentDescription="@string/return_previous_act"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/primary"
            app:fabCustomSize="70dp"
            android:layout_marginEnd="30dp"
            app:srcCompat="@drawable/abc_vector_test" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/take_photo_button"
            android:contentDescription="@string/add_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/primary"
            app:fabCustomSize="70dp"
            android:layout_marginStart="30dp"
            app:srcCompat="@android:drawable/ic_menu_camera" />

    </LinearLayout>

</LinearLayout>