<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:id="@+id/choose_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/select_cases_files_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:text="@string/select_cases_files"
            style="?android:attr/buttonBarButtonStyle"  />

        <Button
            android:id="@+id/select_cases_archives_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:text="@string/select_cases_archives"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragments_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/choose_fragment_layout"
        android:layout_above="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/export_file_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/create_new_folder"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/export_file_button"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_margin="10dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/add_new_case"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/add"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/add_case_button"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_margin="10dp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</RelativeLayout>